package com.example.hw3.townhallinterfaces.interfaces;

import com.example.hw3.townhallinterfaces.models.properties.Property;

public interface IOwnerDetails {
    void purchaseDate(Property property);
}
