package com.example.hw3.townhallinterfaces.interfaces;

public interface ITaxable {
void printMessage(String msg, String typeOfProperty);
}
